--- a/bugshop/updates/version.yaml
+++ b/bugshop/updates/version.yaml
@@ -9,3 +9,15 @@
 1.0.4:
     - 'Updated table arteriaweb_bugshop_details'
     - builder_table_update_arteriaweb_bugshop_details.php
+1.0.5:
+    - 'Updated table arteriaweb_bugshop_details'
+    - builder_table_update_arteriaweb_bugshop_details_2.php
+1.0.6:
+    - 'Created table arteriaweb_bugshop_categories'
+    - builder_table_create_arteriaweb_bugshop_categories.php
+1.0.7:
+    - 'Updated table arteriaweb_bugshop_details'
+    - builder_table_update_arteriaweb_bugshop_details_3.php
+1.0.8:
+    - 'Created table arteriaweb_bugshop_helpers'
+    - builder_table_create_arteriaweb_bugshop_helpers.php
